test/error/test-03.ifj21
-- 3 (not defined function)
require "ifj21"

main()
